[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Collect.gd" type="Script" id=1]
[ext_resource path="res://Assets/materials/Collect.tres" type="Material" id=2]
[ext_resource path="res://Assets/materials/ForceField.tres" type="Material" id=3]
[ext_resource path="res://Scripts/EnergyFieldSpin.gd" type="Script" id=4]
[ext_resource path="res://Assets/Music & SoundEffects/Pickup.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Resources/Collect.anim" type="Animation" id=6]
[ext_resource path="res://Assets/materials/Collect_Bits.tres" type="Material" id=7]

[sub_resource type="CubeMesh" id=1]
material = ExtResource( 2 )
size = Vector3( 1, 1, 1 )

[sub_resource type="CubeMesh" id=2]
material = ExtResource( 3 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5 )

[sub_resource type="CubeMesh" id=4]
material = ExtResource( 7 )
size = Vector3( 0.25, 0.25, 0.25 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.0112994, 0.242938, 0.576271 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.97583, 0.38125, 1, 1, 0.960938, 0, 1 )

[node name="Collect" type="Area"]
transform = Transform( 0.853553, -0.146447, 0.5, 0.5, 0.5, -0.707107, -0.146447, 0.853553, 0.5, 0, 2, 0 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = null

[node name="energyField" type="MeshInstance" parent="MeshInstance"]
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 0.945098, 1, 0, 1 )
light_energy = 16.0
light_indirect_energy = 1.25
shadow_enabled = true
omni_range = 3.41453

[node name="PickupSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -7.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Collect = ExtResource( 6 )

[node name="Particles" type="CPUParticles" parent="AnimationPlayer"]
transform = Transform( 1, 1.49012e-08, 0, 2.98023e-08, -5.96046e-08, 1, 0, -1, 0, -1.19209e-07, 7, -1.19209e-07 )
emitting = false
amount = 10
lifetime = 5.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
mesh = SubResource( 4 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3.0
initial_velocity_random = 1.0
angular_velocity_random = 1.0
angle = 360.0
angle_random = 1.0
scale_amount = 0.9
color_ramp = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Collect_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
